Fix date dropdown and STATUS alignment

--- a/src/App.css
+++ b/src/App.css
@@ -260,8 +260,9 @@ body {
 }
 
 .tabela .status {
-  text-align: center;
+  text-align: right;
   font-weight: 500;
+  vertical-align: middle;
 }
 
 .status .online {
